[project]
authors = [
    { name = "Clément Jambon", email = "cjambon@mit.edu" },
]
name = "mcpcb"
version = "0.0.1"
description = "PCB with a hint of MC and Diff"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
